<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#000000"
    android:layout_width="fill_parent" android:layout_height="fill_parent">

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:scrollbars="vertical" >

    <TextView android:id="@+id/editText1" android:layout_width="match_parent" android:text="@string/info1"
        android:layout_height="wrap_content" android:textColor="#ffffff"  android:textSize="20sp"/>
	<TextView android:id="@+id/editText2" android:layout_width="match_parent" android:text="@string/info2"
        android:layout_height="wrap_content" android:textColor="#ffff00"  android:textSize="18sp"/>

    <TextView
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info3"
        android:textColor="#a9a9a9"
        android:textSize="16sp" />
    <TextView android:id="@+id/editText4" android:layout_width="match_parent" android:text="@string/info4"
        android:layout_height="wrap_content" android:textColor="#ffff00"  android:textSize="18sp"/>
    <TextView android:id="@+id/editText5" android:layout_width="match_parent" android:text="@string/info5"
        android:layout_height="wrap_content" android:textColor="#A9A9A9"  android:textSize="16sp"/>

    <TextView
        android:id="@+id/editText6"
        android:layout_width="match_parent"
        android:text="@string/info6"
        android:layout_height="wrap_content"
        android:textColor="#FFFF00"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/editText7"
        android:layout_width="match_parent"
        android:text="@string/info7"
        android:layout_height="wrap_content"
        android:textColor="#A9A9A9"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/editText8"
        android:layout_width="match_parent"
        android:text="@string/info8"
        android:layout_height="wrap_content"
        android:textColor="#FFFF00"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/editText9"
        android:layout_width="match_parent"
        android:text="@string/info9"
        android:layout_height="wrap_content"
        android:textColor="#A9A9A9"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/editText10"
        android:layout_width="match_parent"
        android:text="@string/info10"
        android:layout_height="wrap_content"
        android:textColor="#FFFF00"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/editText11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info11"
        android:textColor="#A9A9A9"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/editText12"
        android:layout_width="match_parent"
        android:text="@string/info12"
        android:layout_height="wrap_content"
        android:textColor="#FFFF00"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/editText13"
        android:layout_width="match_parent"
        android:text="@string/info13"
        android:layout_height="wrap_content"
        android:textColor="#A9A9A9"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/editText14"
        android:layout_width="match_parent"
        android:text="@string/info14"
        android:layout_height="wrap_content"
        android:textColor="#FFFF00"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/editText15"
        android:layout_width="match_parent"
        android:text="@string/info15"
        android:layout_height="wrap_content"
        android:textColor="#A9A9A9"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/editText16"
        android:layout_width="match_parent"
        android:text="@string/info16"
        android:layout_height="wrap_content" android:textColor="#FFFF00"  android:textSize="18sp"/>
    <TextView android:id="@+id/editText17" android:layout_width="match_parent" android:text="@string/info17"
        android:layout_height="wrap_content" android:textColor="#A9A9A9"  android:textSize="16sp"/>
    <TextView android:id="@+id/editText18" android:layout_width="match_parent" android:text="@string/info18"
        android:layout_height="wrap_content" android:textColor="#FFFF00"  android:textSize="18sp"/>
  	<TextView android:id="@+id/editText19" android:layout_width="match_parent" android:text="@string/info19"
        android:layout_height="wrap_content" android:textColor="#A9A9A9"  android:textSize="16sp"/>	
    <TextView android:id="@+id/editText20" android:layout_width="match_parent" android:text="@string/info20"
        android:layout_height="wrap_content" android:textColor="#FFFF00"  android:textSize="18sp"/>
    <TextView android:id="@+id/editText21" android:layout_width="match_parent" android:text="@string/info21"
        android:layout_height="wrap_content" android:textColor="#A9A9A9"  android:textSize="16sp"/>

    <TextView
        android:id="@+id/editText26"
        android:layout_width="match_parent"
        android:text="@string/info26"
        android:layout_height="wrap_content"
        android:textColor="#FFFF00"
        android:textSize="18sp"
        android:justificationMode="inter_word" />
    <TextView android:id="@+id/editText27" android:layout_width="match_parent" android:text="@string/info27"
        android:layout_height="wrap_content" android:textColor="#A9A9A9"  android:textSize="16sp"/>
    <TextView android:id="@+id/editText28" android:layout_width="match_parent" android:text="@string/info28"
        android:layout_height="wrap_content" android:textColor="#FFFF00"  android:textSize="18sp"/>
    <TextView android:id="@+id/editText29" android:layout_width="match_parent" android:text="@string/info29"
        android:layout_height="wrap_content" android:textColor="#A9A9A9"  android:textSize="16sp"/>
    <TextView android:id="@+id/editText38" android:layout_width="match_parent" android:text="@string/info38"
        android:layout_height="wrap_content" android:textColor="#FFFF00"  android:textSize="18sp"/>
    <TextView android:id="@+id/editText39" android:layout_width="match_parent" android:text="@string/info39"
        android:layout_height="wrap_content" android:textColor="#A9A9A9"  android:textSize="16sp"/>
    
    <TextView android:id="@+id/editText22" android:layout_width="match_parent" android:text="@string/info22"
        android:layout_height="wrap_content" android:textColor="#FFFFFF"  android:textSize="20sp"/>
    <TextView android:id="@+id/editText23" android:layout_width="match_parent" android:text="@string/info23"
        android:layout_height="wrap_content" android:textColor="#A9A9A9"  android:textSize="16sp"/>     
    <TextView android:id="@+id/editText24" android:layout_width="match_parent" android:text="@string/info24"
        android:layout_height="wrap_content" android:textColor="#A9A9A9"  android:textSize="16sp"/>  
    <TextView android:id="@+id/editText25" android:layout_width="match_parent" android:text="@string/info25"
        android:layout_height="wrap_content" android:textColor="#A9A9A9"  android:textSize="16sp"/>
 	<TextView android:id="@+id/editText30" android:layout_width="match_parent" android:text="@string/info30"
        android:layout_height="wrap_content" android:textColor="#A9A9A9"  android:textSize="16sp"/>
 	
   <TextView android:id="@+id/editText31" android:layout_width="match_parent" android:text="@string/info31"
        android:layout_height="wrap_content" android:textColor="#FFFFFF"  android:textSize="20sp"/>
    <TextView android:id="@+id/editText32" android:layout_width="match_parent" android:text="@string/info32"
        android:layout_height="wrap_content" android:textColor="#A9A9A9"  android:textSize="16sp"/>     
    <TextView android:id="@+id/editText33" android:layout_width="match_parent" android:text="@string/info33"
        android:layout_height="wrap_content" android:textColor="#A9A9A9"  android:textSize="16sp"/>  
    <TextView android:id="@+id/editText34" android:layout_width="match_parent" android:text="@string/info34"
        android:layout_height="wrap_content" android:textColor="#A9A9A9"  android:textSize="16sp"/>
 	<TextView android:id="@+id/editText35" android:layout_width="match_parent" android:text="@string/info35"
        android:layout_height="wrap_content" android:textColor="#A9A9A9"  android:textSize="16sp"/>   
 	<TextView android:id="@+id/editText36" android:layout_width="match_parent" android:text="@string/info36"
        android:layout_height="wrap_content" android:textColor="#A9A9A9"  android:textSize="16sp"/>

    <TextView
        android:id="@+id/editText37"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:paddingBottom="50dp"
        android:text="@string/info37"
        android:textColor="#A9A9A9"
        android:textSize="16sp" />
 	
    </LinearLayout>
    </ScrollView>
