
    <menu xmlns:tools="http://schemas.android.com/tools"
          xmlns:android="http://schemas.android.com/apk/res/android">
        <item
            android:id="@+id/item1"
            android:icon="@android:drawable/ic_menu_info_details"
            android:showAsAction="ifRoom"
            android:title="@string/apropos">
        </item>
        <item android:id="@+id/item8"
            android:icon="@android:drawable/ic_menu_today"
            android:showAsAction="ifRoom"
            android:title="@string/display_advices">
        </item>
        <item
            android:id="@+id/item2"
            android:icon="@android:drawable/ic_menu_help"
            android:showAsAction="ifRoom"
            android:title="@string/infos">
        </item>
        <item android:id="@+id/item3" 
            android:icon="@android:drawable/ic_menu_preferences"
            android:showAsAction="ifRoom"
            android:title="@string/params">
        </item>
        <!--
        <item android:id="@+id/item4" 
            android:icon="@android:drawable/ic_menu_share"
            android:title="@string/don">
        </item>
                    -->
        <item android:id="@+id/item5"
            android:icon="@android:drawable/ic_dialog_info"
            android:showAsAction="ifRoom"
            android:title="@string/check_version">
        </item>
        <item android:id="@+id/item6"
            android:icon="@android:drawable/ic_menu_share"
            android:showAsAction="ifRoom"
            android:title="@string/share">
        </item>
        <item android:id="@+id/item7"
            android:icon="@android:drawable/ic_menu_send"
            android:showAsAction="ifRoom"
            android:title="@string/comment">
        </item>

    </menu>
